objects/Email_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Add_Hostname__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Adds the hostname to the end of the email footer</inlineHelpText>
        <label>Add Hostname</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_to_Outlook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Outlook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_URL__c</fullName>
        <label>Banner URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Banner_URL__c</fullName>
        <label>Disclaimer Banner URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <label>Disclaimer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color__c</fullName>
        <label>Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Full_width_banner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full width banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HTML__c</fullName>
        <description>Field used to store the raw HTML content</description>
        <label>HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header_BU__c</fullName>
        <label>Header BU</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Heading__c</fullName>
        <label>Heading</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Link_Color__c</fullName>
        <label>Link Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Logo_URL__c</fullName>
        <label>Primary Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <inlineHelpText>Use to override event start time and end time</inlineHelpText>
        <label>Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invitation</fullName>
                </value>
                <value>
                    <fullName>Confirmation</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>header__c</fullName>
        <description>The heading that is deplayed behind the banner</description>
        <label>header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Event Email Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Market</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Market</value>
        </filters>
        <label>Market</label>
    </listViews>
    <nameField>
        <label>Event Email Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Email Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>